[tool.poetry]
name = "pypasscrypt"
version = "1.0.0"
description = "a module for testing new python features"
authors = ["tejus3131 <tejus3131@gmail.com>"]
license = "None"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
rich = "^13.7.1"
pyperclip = "^1.9.0"
inquirerpy = "^0.3.4"
cryptography = "^42.0.8"

[tool.poetry.group.dev.dependencies]
sphinx = "^7.4.7"
sphinx-rtd-theme = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pm = "pm:main"
